# Generated by Django 4.0.4 on 2026-08-26 15:45

from django.conf import settings
import django.contrib.auth.models
import django.contrib.auth.validators
from django.db import migrations, models
import django.db.models.deletion
import django.utils.timezone


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='Usuario',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='email address')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('rol', models.CharField(choices=[('SOLICITANTE', 'Solicitante'), ('DESARROLLADOR', 'Desarrollador'), ('COORDINADOR', 'Coordinador')], max_length=20)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'user',
                'verbose_name_plural': 'users',
                'abstract': False,
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='ModeloIA',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('proveedor', models.CharField(help_text='Ej: Groq, Gemini, OpenRouter', max_length=50)),
                ('modelo', models.CharField(help_text='Ej: llama-3.3-70b, gemini-2.0-flash', max_length=100)),
                ('actualizado_en', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Modelo de IA',
                'verbose_name_plural': 'Modelos de IA',
            },
        ),
        migrations.CreateModel(
            name='Sistema',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('codigo', models.CharField(max_length=20, unique=True)),
            ],
            options={
                'verbose_name': 'Sistema',
                'verbose_name_plural': 'Sistemas',
            },
        ),
        migrations.CreateModel(
            name='Ticket',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titulo', models.CharField(max_length=200)),
                ('descripcion_original', models.TextField(help_text='Texto enriquecido (HTML/Markdown)')),
                ('estado', models.CharField(choices=[('PENDIENTE', 'Pendiente'), ('EN_PROCESO', 'En proceso'), ('CERRADO', 'Cerrado'), ('REABIERTO', 'Reabierto')], default='PENDIENTE', max_length=20)),
                ('creado_en', models.DateTimeField(auto_now_add=True)),
                ('cerrado_en', models.DateTimeField(blank=True, null=True)),
            ],
            options={
                'verbose_name': 'Ticket',
                'verbose_name_plural': 'Tickets',
                'ordering': ['-creado_en'],
            },
        ),
        migrations.CreateModel(
            name='TicketDesarrollador',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tomado_en', models.DateTimeField(auto_now_add=True)),
                ('ticket', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.ticket')),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Desarrollador de ticket',
                'verbose_name_plural': 'Desarrolladores de ticket',
                'unique_together': {('ticket', 'usuario')},
            },
        ),
        migrations.AddField(
            model_name='ticket',
            name='desarrolladores',
            field=models.ManyToManyField(related_name='tickets_tomados', through='core.TicketDesarrollador', to=settings.AUTH_USER_MODEL),
        ),
        migrations.AddField(
            model_name='ticket',
            name='sistema',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='tickets', to='core.sistema'),
        ),
        migrations.AddField(
            model_name='ticket',
            name='solicitante',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='tickets_reportados', to=settings.AUTH_USER_MODEL),
        ),
        migrations.CreateModel(
            name='ConfiguracionIA',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('actualizado_en', models.DateTimeField(auto_now=True)),
                ('modelo_activo', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='core.modeloia')),
            ],
            options={
                'verbose_name': 'Configuración de IA',
                'verbose_name_plural': 'Configuración de IA',
            },
        ),
        migrations.CreateModel(
            name='Comentario',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('cuerpo', models.TextField(help_text='Texto enriquecido (HTML/Markdown)')),
                ('creado_en', models.DateTimeField(auto_now_add=True)),
                ('ticket', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='comentarios', to='core.ticket')),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Comentario',
                'verbose_name_plural': 'Comentarios',
                'ordering': ['creado_en'],
            },
        ),
        migrations.CreateModel(
            name='AnalisisIA',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tipo', models.CharField(choices=[('CONCEPTUAL', 'Conceptual'), ('TECNICO', 'Técnico')], max_length=20)),
                ('problema', models.TextField(blank=True)),
                ('comportamiento_esperado', models.TextField(blank=True)),
                ('comportamiento_observado', models.TextField(blank=True)),
                ('pasos_reproducir', models.TextField(blank=True)),
                ('datos_relevantes', models.TextField(blank=True)),
                ('informacion_faltante', models.TextField(blank=True)),
                ('estado_aprobacion', models.CharField(choices=[('PENDIENTE_REVISION', 'Pendiente de revisión'), ('ACEPTADO', 'Aceptado'), ('OBJETADO', 'Objetado'), ('NO_APLICA', 'No aplica')], default='PENDIENTE_REVISION', max_length=20)),
                ('observacion_solicitante', models.TextField(blank=True)),
                ('version_prompt', models.CharField(default='v1', max_length=50)),
                ('generado_en', models.DateTimeField(auto_now_add=True)),
                ('modelo_ia', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='analisis_generados', to='core.modeloia')),
                ('ticket', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='analisis', to='core.ticket')),
            ],
            options={
                'verbose_name': 'Análisis de IA',
                'verbose_name_plural': 'Análisis de IA',
                'ordering': ['-generado_en'],
            },
        ),
        migrations.CreateModel(
            name='Adjunto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre_archivo', models.CharField(max_length=255)),
                ('tipo_archivo', models.CharField(choices=[('IMAGEN', 'Imagen'), ('DOCUMENTO', 'Documento')], max_length=20)),
                ('archivo', models.FileField(upload_to='adjuntos/%Y/%m/')),
                ('subido_en', models.DateTimeField(auto_now_add=True)),
                ('comentario', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='adjuntos', to='core.comentario')),
                ('subido_por', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to=settings.AUTH_USER_MODEL)),
                ('ticket', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='adjuntos', to='core.ticket')),
            ],
            options={
                'verbose_name': 'Adjunto',
                'verbose_name_plural': 'Adjuntos',
            },
        ),
        migrations.CreateModel(
            name='UsuarioSistema',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('sistema', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.sistema')),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Acceso a sistema',
                'verbose_name_plural': 'Accesos a sistemas',
                'unique_together': {('usuario', 'sistema')},
            },
        ),
        migrations.AddConstraint(
            model_name='adjunto',
            constraint=models.CheckConstraint(check=models.Q(models.Q(('comentario__isnull', True), ('ticket__isnull', False)), models.Q(('comentario__isnull', False), ('ticket__isnull', True)), _connector='OR'), name='chk_pertenece_a_uno'),
        ),
    ]
